# cargame

./: .clang-format  .gitignore  CMakeLists.txt  README.md
game/: FinishMenu.tscn  MainMenu.tscn  PauseMenu.tscn  Player.gd  Player.tscn  PlayerItem.tscn  PlayerSpectateItem.tscn  Replay.gd  SelectTrackMenu.tscn  TrackReplay.gd  car.tscn  car_engine_sound.wav.import  car_engine_sound2.wav.import  car_engine_sound3.wav.import  create_track_mesh.gd  default_bus_layout.tres  evening_road_01_puresky_4k.hdr.import  export_presets.cfg  hatchback-sports.glb.import  hud.tscn  icon.svg.import  load_replay_button.tscn  main.gd  main.tscn  player.gd  player.tscn  player_spectate_item.tscn  project.godot  race.glb.import  random_name.gd  replay.gd  replays.gd  session.gd  simulation.gd  track.gd  track1.glb  track1.glb.import  track2.glb.import  track3.glb  track3.glb.import  (+11 more)
game/Textures/: colormap.png.import
game/fonts/: FiraMono-Medium.ttf.import
game/formats/: player_profile.gd  player_profile_loader.gd  (+3 more)
physics/: .clangd  CMakeLists.txt  CMakePresets.json  compile_commands.json
server_browser/: Cargo.toml
server_browser/src/: lib.rs  server_browser.rs  server_info.rs
src/: Layers.h  car_physics.cpp  car_physics.hpp  car_physics_input.cpp  car_physics_input.hpp  car_physics_simulation_info.cpp  car_physics_simulation_info.hpp  car_physics_step.cpp  car_physics_step.hpp  car_physics_track_mesh.cpp  car_physics_track_mesh.hpp  configuration.h  gdexample.cpp  gdexample.h  gdphysics.cpp  gdphysics.h  physics.cpp  physics.h  register_types.cpp  register_types.h
(+70 files in other folders)
