[package]
name = "server_browser"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
gethostname = "0.4.3"
mdns-sd = { version = "0.11.1", default-features = false }
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }

[profile.release]
strip = true
lto = true
opt-level = "z"
panic = "abort"
